QQuickRepeater::clear: Remove items from the end backwards.

This way, the indices for itemRemoved will make sense consistently.

This was broken with 5f5aba5b6e690ca54e66f41b93474f7e67e83c8b, dated November
2011.

Task-number: QTBUG-42243
Change-Id: I5fecfd4174049f51e0cec90e40e6332de5d5bf01
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>